# hay-logger

./: .gitignore  .pre-commit-config.yaml  Dockerfile  manage.py  notes.md  pyproject.toml  readme.md  requirements.txt
.github/workflows/: docker-image.yml
hay_logger/: asgi.py  settings.py  urls.py  wsgi.py
log_app/: admin.py  models.py  urls.py  views.py
log_app/templates/: base.html
log_app/templates/log_app/: index.html  log_confirm_delete.html  log_form.html  log_list.html
track_hay/: apps.py
up_load/: data_to_django.json  hay log book.csv  up_load_script.py
